# note-outboard-dfu

./: .gitignore  README.md
binaries/: arduino-firmware.elf  checksums.txt  circuitpython.binpack  zephyr-firmware.elf
binaries/adafruit_feather_nrf52840_express/bootloader/: README.md  update-feather_nrf52840_express_bootloader-0.7.0-15-g62b53ae-dirty_nosd.uf2
binaries/adafruit_feather_nrf52840_express/circuitpython/: README.md  adafruit-circuitpython-feather_nrf52840_express-en_US-7.3.3.zip.binpack
cygnet/: README.md
cygnet/button-press/arduino/: platformio.ini
cygnet/button-press/zephyr/: README.md
cygnet/sensor-and-screen-test/arduino/: platformio.ini
micromod-stm32/micromod-stm32-demo/: micromod-stm32-demo.ino
micromod-stm32/micromod-stm32-environmental-function-example-v1/: metadata.h  micromod-stm32-environmental-function-example-v1.ino
micromod-stm32/micromod-stm32-environmental-function-example-v2/: metadata.h  micromod-stm32-environmental-function-example-v2.ino
nrf52840/: README.md
nrf52840/blinky/: README.md
nrf52840/blinky/arduino/: README.md
nrf52840/blinky/circuitpython/: README.md
nrf52840/blinky/ncs/: README.md
nrf52840/blinky/ncs/slow/: CMakeLists.txt  README.md  prj.conf
nrf52840/blinky/ncs/slow/child_image/: mcuboot.conf  mcuboot.overlay
stm32/: README.md
stm32/micromod-stm32/micromod-stm32-demo/: micromod-stm32-demo.ino
stm32f405-feather/stm32f405-feather-demo/: stm32f405-feather-demo.ino
stresstest/arduino/: sketch_hw_dfu_test.ino
swan/: README.md
test/: README.md  compile-check.sh
(+33 files in other folders)
